--- a/main.css
+++ b/main.css
@@ -1,9 +1,48 @@
 body {
-    background-color: rgb(197, 195, 176);
+    max-width: 480px;
+    background-color: rgb(244, 249, 254);
+    border: 1px solid red;
 }
 
-img {
-    transform: translate3d(0px, 0px, 0px) scale3d(1.205, 1.205, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); 
-    transform-style: preserve-3d; 
-    will-change: transform;
+#background-img {
+    margin-top: 5rem;
+    left: 27%;
+    position: absolute;
+    z-index: -1;
+    width: 380px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
+
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: rgba(110, 110, 110, 0.188);
+    box-shadow: 0 8px 32px 0 rgba(56, 0, 0, 0.3);
+    backdrop-filter: blur(10px);
+}
+header h3 {
+    font-size: 1rem;
+}
+header h3:hover {
+    color: #4CAF50;
+}
+header h1 {
+    color: red;
+}
+header button {
+    background-color: #4CAF50;
+    color: white;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 2px 5px 12px 2px rgba(224, 3, 3, 0.635);
+}
+header button:hover {
+    background-color: rgba(224, 3, 3, 0.635);
+    box-shadow: 2px 5px 12px 2px #4CAF50;
+}
+
