--- a/main.css
+++ b/main.css
@@ -2,11 +2,12 @@ body {
     max-width: 480px;
     background-color: rgb(244, 249, 254);
     border: 1px solid red;
+    font-family: "Balsamiq Sans", serif;
 }
 
 #background-img {
     margin-top: 5rem;
-    left: 27%;
+    left: 10%;
     position: absolute;
     z-index: -1;
     width: 380px;
@@ -46,3 +47,87 @@ header button:hover {
     box-shadow: 2px 5px 12px 2px #4CAF50;
 }
 
+.catch-phrase {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.catch-phrase h2 {
+    animation: fadeRight 1700ms ease-in-out forwards;
+    width: 100%;
+    margin-top: 3rem;
+    font-size: 5rem;
+    text-align: center;
+    color: rgb(187, 242, 171);
+    -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: rgb(137, 1, 1);
+}
+
+span.picked-span {
+    animation: fadeLeft 2700ms ease-in-out forwards;
+}
+
+#beet-spin {
+    position: absolute;
+    left: 0%;
+    top: 20%;
+    width: 150px;
+    animation-name: spin;
+    animation-duration: 4000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+
+
+
+
+@keyframes spin { 
+        from { 
+            transform: rotate(0deg); 
+        } to { 
+            transform: rotate(360deg); 
+        }
+}
+
+@keyframes fadeLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(120px)
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0)
+    }
+}
+@keyframes fadeDown {
+     0% {
+        opacity: 0;
+        transform: translateY(-250px)
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0)
+    }
+}
+@keyframes fadeUp {
+     0% {
+        opacity: 0;
+        transform: translateY(150px)
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0)
+    }
+}
+@keyframes fadeRight {
+    0% {
+        opacity: 0;
+        transform: translateX(-120px)
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0)
+    }
+}
