--- a/main.css
+++ b/main.css
@@ -78,6 +78,86 @@ span.picked-span {
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
+.gallery {
+    background-color: #4caf4f00;
+}
+.slider {
+    max-width: 450px;
+    margin: 0 auto;
+    padding-top: 1em;
+    --slide-count: 3;
+    --slide-width: calc(
+        (100% / var(--slide-count)) - 1.2em);  
+    width: 100%;
+    height: 35em;
+    position: relative;
+    overflow: hidden;
+    perspective: 1000px;
+}
+
+.wrapper {
+    transform-style: preserve-3d;
+}
+.slide {
+    position: absolute;
+    width: var(--slide-width);
+    padding-top: 30%;
+    border-radius: 7px;
+    transition: 300ms ease-out;
+    overflow: hidden;
+}
+.slide img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 180%;
+    height: 100%;
+    z-index: 0;
+    transition: 400mx ease-in-out;
+}
+
+.buttons {
+    width: 98%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.buttons img {
+    width: 2em;
+}
+.buttons img:hover {
+    scale: 1.5;
+}
+
+.slide:nth-child(1){
+    left: calC((var-(--slide-width) * -1));
+}
+
+
+
+/*  featured in  */
+.featured-div {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    padding: 0 0 7rem 0;
+    border: 1px solid red;
+}
+.feature-in {
+    text-align: center;
+}
+
+.featured-marketing {
+    display: flex;
+    gap: 50px;
+    position: absolute;
+    animation: scroll 10s linear infinite;
+    white-space: nowrap;
+}
+.featured-marketing img{
+    width: 30%;
+    height: 80px;
+}
 
 
 
@@ -129,5 +209,14 @@ span.picked-span {
     100% {
         opacity: 1;
         transform: translateX(0)
+    }
+}
+
+@keyframes scroll {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(-100%);
     }
 }
