--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
     max-width: 480px;
     background-color: rgb(244, 249, 254);
-    border: 1px solid red;
+    border: 1px solid rgb(0, 13, 255);
     font-family: "Balsamiq Sans", serif;
 }
 
@@ -119,14 +119,12 @@ span.picked-span {
 }
 
 
-
 /*  featured in  */
 .featured-div {
     width: 100%;
     overflow: hidden;
     position: relative;
     padding: 0 0 7rem 0;
-    border: 1px solid red;
 }
 .feature-in {
     text-align: center;
@@ -144,9 +142,51 @@ span.picked-span {
     height: 80px;
 }
 
+/* MEALS */
+.meals {
+    width: 100%;
+}
+div.meal {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border: 1px solid rgb(151, 0, 0);
+}
+.test-about-meal{
+    width: 100%;
+}
+.test-about-meal h2{
+    font-size: 1rem;
+    margin-left: 1rem;
+}
+.test-about-meal p {
+    font-size: 0.8rem;
+    margin-left: 1rem;
+    width: 80%;
+}
+.meal-image {
+    width: 80%;
+}
+.meal-image img {
+    width: 100%;
+}
+/* button.new-recipe-button {
+    position: absolute;
+    left: 40%;
+    background-color: rgb(133, 2, 2);
+    border: 1px solid white;
+    padding: 1rem 1rem 1rem 1rem;
+    border-radius: 50%;
+    color: white;
+} */
 
 
 
+
+
+#veggie-platter {
+    width: 100%;
+}
 
 @keyframes spin { 
         from { 
@@ -219,4 +259,49 @@ span.picked-span {
     .slide img {
         width: 80%; /* Medium size for tablets */
     }
+}
+
+
+
+
+
+
+
+
+/* CSS */
+button.new-recipe-button {
+  position: absolute;
+  left: 40%; 
+  background-color: #fbeee0;
+  border: 2px solid #420000;
+  border-radius: 30px;
+  box-shadow: #420002 4px 4px 0 0;
+  color: #420000;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 1rem;
+  padding: 0 10px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+button.new-recipe-button:hover {
+  background-color: #fff;
+}
+
+button.new-recipe-button:active {
+  box-shadow: #422800 2px 2px 0 0;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  button.new-recipe-button {
+    min-width: 120px;
+    padding: 0 25px;
+  }
 }
