--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 body {
     max-width: 480px;
-    background-color: rgb(244, 249, 254);
-    border: 1px solid rgb(0, 13, 255);
+    background-color: rgb(240, 236, 236);
     font-family: "Balsamiq Sans", serif;
+    margin: 0 auto;
 }
 
 #background-img {
@@ -21,8 +21,10 @@ header {
     justify-content: space-around;
     align-items: center;
     background: rgba(110, 110, 110, 0.188);
-    box-shadow: 0 8px 32px 0 rgba(56, 0, 0, 0.3);
+    box-shadow: 0 8px 32px 0 rgba(106, 4, 4, 0.669);
     backdrop-filter: blur(10px);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 header h3 {
     font-size: 1rem;
@@ -32,6 +34,8 @@ header h3:hover {
 }
 header h1 {
     color: red;
+    -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgb(137, 1, 1);
 }
 header button {
     background-color: #4CAF50;
@@ -51,27 +55,28 @@ header button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 100%;
 }
 .catch-phrase h2 {
-    animation: fadeRight 1700ms ease-in-out forwards;
-    width: 100%;
-    margin-top: 3rem;
-    font-size: 5rem;
+    font-size: 4rem;
+    margin-top: -12rem;
     text-align: center;
     color: rgb(187, 242, 171);
-    -webkit-text-stroke-width: 3px;
-  -webkit-text-stroke-color: rgb(137, 1, 1);
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: rgb(137, 1, 1);
+}
+.catch-phrase h2:hover {
+    color: #4CAF50;
 }
 
+
 span.picked-span {
-    animation: fadeLeft 2700ms ease-in-out forwards;
+    animation: fadeLeft 3700ms ease-in-out forwards;
 }
 
 #beet-spin {
-    position: absolute;
-    left: 0%;
-    top: 20%;
+    margin-top: 5rem;
     width: 150px;
     animation-name: spin;
     animation-duration: 4000ms;
@@ -87,7 +92,9 @@ span.picked-span {
     overflow: hidden;
     margin-bottom: 0;
     padding-bottom: 0;
+    border-radius: 15px;
 }
+
 .list {
     position: absolute;
     top: 13%;
@@ -103,24 +110,36 @@ span.picked-span {
     height: 50%;
     object-fit: cover;
 }
+.item img:hover {
+    scale: 1.5;
+}
 
 .buttons {
     position: absolute;
     top: 50%;
-    left: 5%;
+    left: 2%;
     width: 95%;
     height: 12%;
     display: flex;
     justify-content: space-between;
 }
-.buttons button {
-    width: 30%;
-    height: 20px;
+.buttons img {
+    animation-name: spin;
+    animation-duration: 4000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
-
+.buttons img:hover {
+    scale: 1.5;
+}
+.after-food-hr {
+    color: rgb(151, 0, 0);
+    width: 85%;
+}
 
 /*  featured in  */
 .featured-div {
+    margin-top: 2rem;
     width: 100%;
     overflow: hidden;
     position: relative;
@@ -138,13 +157,16 @@ span.picked-span {
     white-space: nowrap;
 }
 .featured-marketing img{
-    width: 30%;
+    width: 60%;
     height: 80px;
 }
 
 /* MEALS */
 .meals {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
 div.meal {
     width: 100%;
@@ -158,6 +180,7 @@ div.meal {
 .test-about-meal h2{
     font-size: 1rem;
     margin-left: 1rem;
+    color:rgb(137, 1, 1)
 }
 .test-about-meal p {
     font-size: 0.8rem;
@@ -170,23 +193,156 @@ div.meal {
 .meal-image img {
     width: 100%;
 }
-/* button.new-recipe-button {
-    position: absolute;
-    left: 40%;
-    background-color: rgb(133, 2, 2);
-    border: 1px solid white;
-    padding: 1rem 1rem 1rem 1rem;
-    border-radius: 50%;
-    color: white;
-} */
 
-
-
-
-
-#veggie-platter {
-    width: 100%;
+button.new-recipe-button {
+  position: absolute;
+  margin-left: 12rem; 
+  background-color: #fbeee0;
+  border: 2px solid #420000;
+  border-radius: 30px;
+  box-shadow: #420002 4px 4px 0 0;
+  color: #420000;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 1rem;
+  padding: 0 10px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
+
+button.new-recipe-button:hover {
+  background-color: #fff;
+}
+
+button.new-recipe-button:active {
+  box-shadow: #422800 2px 2px 0 0;
+  transform: translate(2px, 2px);
+}
+.video-text {
+    position: relative;
+    background-color: rgba(250, 235, 215, 0.684);
+}
+#veggie-platter {
+    margin-top: 1rem;
+    width: 100%;
+    box-shadow: 2px 5px 12px 2px #850a7e;
+}
+
+.text-over-video {
+    position: absolute;
+    top: 20%;
+    left: 5%;
+    /* margin-top: -15rem;
+    width: 30rem;
+    left: 3rem; */
+    font-size: 1.5rem;
+    color: rgba(255, 255, 255, 0);
+    -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: rgb(255, 255, 255);
+}
+.text-over-video h2:hover{
+    color: rgb(255, 255, 255);
+    -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: rgba(255, 255, 255, 0);
+}
+
+.our-dishes {
+    width: 100%;
+    background-color: rgba(250, 235, 215, 0.684);
+    padding-bottom: 3rem;
+    padding-top: 1rem;
+}
+.new-offer-dish {
+    text-align: center;
+}
+.new-offer-dish h2 {
+    margin-top: 2rem;
+}
+.new-offer-dish h2 span {
+    color:rgb(223, 11, 11);
+    font-size: 3.2rem;
+}
+.new-offer-dish h2 span:hover {
+    color: rgb(255, 243, 133);
+    -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgb(16, 8, 8);
+}
+
+.dish-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 900;
+    color:rgb(137, 1, 1)
+}
+.dish-img img:hover {
+    scale: 1.5;
+    transform: rotate(10deg);
+}
+
+.dish-img  img{
+     width: 30%;
+}
+#beet-cake {
+    width: 20%;
+}
+
+.location {
+    margin-top: 4rem;
+}
+.location,
+.location-destination {
+    width: 100%;
+    height: 12rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.location-destinations {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.location-destinations img {
+    width: 20%;
+}
+.location-destinations .location-destination:first-child{
+    margin-top: 1rem;
+}
+
+.location-destination h3,
+.location-destination h4,
+.location-destination p{
+        margin: 0.5rem;
+}
+
+footer {
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    background-color: rgba(250, 235, 215, 0.684);
+    backdrop-filter: blur(10px);
+}
+footer h4 {
+    font-size: 1.5rem;
+}
+.socials {
+    width: 100%;
+    margin-bottom: 3rem;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+}
+
 
 @keyframes spin { 
         from { 
@@ -195,7 +351,6 @@ div.meal {
             transform: rotate(360deg); 
         }
 }
-
 @keyframes fadeLeft {
     0% {
         opacity: 0;
@@ -236,7 +391,6 @@ div.meal {
         transform: translateX(0)
     }
 }
-
 @keyframes scroll {
     from {
         transform: translateX(100%);
@@ -248,18 +402,6 @@ div.meal {
 
 
 
-/* Responsive Design */
-@media (max-width: 768px) {
-    .slide img {
-        width: 70%; /* Smaller for mobile */
-    }
-}
-
-@media (min-width: 769px) and (max-width: 1024px) {
-    .slide img {
-        width: 80%; /* Medium size for tablets */
-    }
-}
 
 
 
@@ -268,40 +410,3 @@ div.meal {
 
 
 
-/* CSS */
-button.new-recipe-button {
-  position: absolute;
-  left: 40%; 
-  background-color: #fbeee0;
-  border: 2px solid #420000;
-  border-radius: 30px;
-  box-shadow: #420002 4px 4px 0 0;
-  color: #420000;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 600;
-  font-size: 1rem;
-  padding: 0 10px;
-  line-height: 50px;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-button.new-recipe-button:hover {
-  background-color: #fff;
-}
-
-button.new-recipe-button:active {
-  box-shadow: #422800 2px 2px 0 0;
-  transform: translate(2px, 2px);
-}
-
-@media (min-width: 768px) {
-  button.new-recipe-button {
-    min-width: 120px;
-    padding: 0 25px;
-  }
-}
