--- a/main.css
+++ b/main.css
@@ -237,9 +237,6 @@ button.new-recipe-button:active {
     position: absolute;
     top: 20%;
     left: 5%;
-    /* margin-top: -15rem;
-    width: 30rem;
-    left: 3rem; */
     font-size: 1.5rem;
     color: rgba(255, 255, 255, 0);
     -webkit-text-stroke-width: 3px;
@@ -401,12 +398,143 @@ footer h4 {
 }
 
 
+@media (min-width: 768px) {
+    body {
+        max-width: 768px;
+    }
+
+    header {
+        padding: 1rem 2rem;
+    }
+
+    header h3 {
+        font-size: 1.2rem;
+    }
+
+    header h1 {
+        font-size: 2rem;
+    }
+
+    .catch-phrase h2 {
+        font-size: 3rem;
+    }
+
+    .meals {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 2rem;
+    }
+
+    .meal {
+        flex-direction: row;
+        width: 48%;
+        padding: 1rem;
+    }
+
+    .meal-image {
+        width: 50%;
+    }
+
+    button.new-recipe-button {
+        margin-left: 2rem;
+    }
+
+    .featured-marketing img {
+        width: 40%;
+    }
+
+    .text-over-video {
+        font-size: 1.5rem;
+    }
+}
 
 
+/* Desktop View: 1024px and up */
+@media (min-width: 1024px) {
+    body {
+        max-width: 100%;
+    }
 
+    header {
+        transition: 0.3s;
+        justify-content: center;
+        padding: 0.1rem 1rem;
+    }
 
+    header h3 {
+        transition: 0.3s;
+        margin-right: 5rem;
+        font-size: 1.5rem;
+    }
 
+    header h1 {
+        transition: 0.3s;
+        margin-right: 10rem;
+        font-size: 2.5rem;
+    }
 
+    .catch-phrase h2 {
+        transition: 0.3s;
+        margin-top: -15rem;
+        font-size: 7rem;
+    }
+    #beet-spin{
+        transition: 0.3s;
+        margin-top: 7rem;
+    }
 
+    .meals {
+        transition: 0.3s;
+        gap: 3rem;
+    }
+    .meal h2 {
+        transition: 0.3s;
+        font-size: 2rem;
+    }
+    .meal p {
+        transition: 0.3s;
+        font-size: 1rem;
+    }
 
+    .meal {
+        transition: 0.3s;
+        width: 30%;
+    }
+    .meal-image {
+        transition: 0.3s;
+        width: 90%;
+    }
+    button.new-recipe-button {
+        transition: 0.3s;
+        margin-left: 45rem;
+    }
 
+    .featured-marketing img {
+        transition: 0.3s;
+        width: 30%;
+    }
+
+    .text-over-video {
+        transition: 0.3s;
+        font-size: 4rem;
+        left: 10%;
+    }
+
+    .dish-img img {
+        transition: 0.3s;
+        width: 20%;
+    }
+
+    .location{
+        width: 100%;
+    }
+    .location-destinations{
+        width: 60%;
+        justify-content: space-around;
+    }
+
+    .location-destination {
+        width: 30%;
+        transition: 0.3s;
+    }
+}
