--- a/main.css
+++ b/main.css
@@ -92,6 +92,7 @@ span.picked-span {
     border-radius: 50px;
     line-height: 1rem;
     box-shadow: 0px 25px 20px -2px #4CAF50;
+    animation: fadeDown 1700ms ease-in-out forwards;
  }
  .x-modal {
     font-size: 1rem;
@@ -165,11 +166,14 @@ form.register-form label {
     margin-top: 0.7rem;
 }
 form.register-form input {
+    color: white;
     border: none;
+    width: 80%;
     border-radius: 10px;
     padding: .5rem .5rem .5rem .5rem;
     background-color: rgba(0, 77, 27, 0.412);
 }
+
 form.register-form button {
     font-size: 1rem;
     margin: 1rem 0;
@@ -179,6 +183,10 @@ form.register-form button {
     background-color: #af4c4c;
     color: white;
     box-shadow: 0 8px 32px 0 rgba(142, 0, 0, 0.906);
+}
+form.register-form button:hover {
+    background-color: #a7af4c;
+    box-shadow: 0 8px 32px 0 rgba(133, 142, 0, 0.906);
 }
 /* END OF MODAL */
 
@@ -264,6 +272,7 @@ form.register-form button {
     animation: scroll 10s linear infinite;
     white-space: nowrap;
 }
+
 .featured-marketing img{
     width: 60%;
     height: 80px;
