--- a/main.css
+++ b/main.css
@@ -53,7 +53,10 @@ header button:hover {
     box-shadow: 2px 5px 12px 2px #4CAF50;
 }
 
-
+.menu:hover,
+.find-us {
+    cursor: pointer;
+}
 
 .catch-phrase {
     display: flex;
@@ -208,8 +211,6 @@ form.register-form button:hover {
     margin: auto;
     position: relative;
     overflow: hidden;
-    margin-bottom: 0;
-    padding-bottom: 0;
     border-radius: 15px;
 }
 
@@ -271,9 +272,11 @@ form.register-form button:hover {
     display: flex;
     gap: 50px;
     position: absolute;
-    animation: scroll 10s linear infinite;
+    animation: scroll 15s linear infinite;
+    width: max-content;
     white-space: nowrap;
 }
+
 
 .featured-marketing img{
     width: 60%;
@@ -519,7 +522,7 @@ footer h4 {
 }
 @keyframes scroll {
     from {
-        transform: translateX(100%);
+        transform: translateX(0);
     }
     to {
         transform: translateX(-100%);
@@ -586,6 +589,11 @@ footer h4 {
     .featured-marketing img {
         width: 40%;
     }
+
+    .modal-whole{
+        width: 50%;
+        margin-left: 13rem;
+     }
 
     .text-over-video {
         transition: 0.3s;
@@ -658,6 +666,10 @@ footer h4 {
         transition: 0.3s;
         width: 30%;
     }
+    .modal-whole{
+        width: 30%;
+        margin-left: 30rem;
+     }
 
     .text-over-video {
         transition: 0.3s;
